objects/ASI_CRM_Subbrand_Volume__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_PR_Shipment_Btl__c</fullName>
        <label>PR Shipment (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Shipment_CR12__c</fullName>
        <label>PR Shipment (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Shipment_GS_L50__c</fullName>
        <label>PR Shipment &lt;=50ML(Gross Sales)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Shipment_GS__c</fullName>
        <label>PR Shipment (GS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Shipment_L50_Btl__c</fullName>
        <label>PR Shipment &lt;=50ml (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Shipment_L50_CR12__c</fullName>
        <label>PR Shipment &lt;=50ml (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Shipment_L50_STD_Billing__c</fullName>
        <label>PR Shipment &lt;=50ml (STD Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Shipment_L50_STD__c</fullName>
        <label>PR Shipment &lt;=50ml (STD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Shipment_L50__c</fullName>
        <label>PR Shipment &lt;=50ML</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Shipment_LY_MTD_Std_Btl__c</fullName>
        <label>PR Shipment - Last FY MTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Shipment_LY_YTD_Std_Btl__c</fullName>
        <label>PR Shipment - LY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Shipment_Last_FY_MTD_9L__c</fullName>
        <label>PR Shipment - Last FY MTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Shipment_Last_FY_YTD_9L__c</fullName>
        <label>PR Shipment - Last FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Shipment_STD_Billing__c</fullName>
        <label>PR Shipment (STD Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Shipment_STD__c</fullName>
        <label>PR Shipment (STD Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Shipment_TY_VS_LY_YTD__c</fullName>
        <label>PR Shipment - This FY VS Last FY YTD (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Shipment_TY_YTD_Std_Btl__c</fullName>
        <label>PR Shipment - TY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Shipment_This_FY_YTD_9L__c</fullName>
        <label>PR Shipment - This FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Penalty_Coefficient_Applied__c</fullName>
        <label>Penalty Coefficient Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Red_Cap_Btl__c</fullName>
        <label>Red Cap Collection (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Red_Cap_CR12__c</fullName>
        <label>Red Cap Collection (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Red_Cap_GS__c</fullName>
        <label>Red Cap Collection (GS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Red_Cap_Last_FY_MTD_9L__c</fullName>
        <label>Red Cap - Last FY MTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Red_Cap_Last_FY_MTD_Std_Btl__c</fullName>
        <label>Red Cap - Last FY MTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Red_Cap_Last_FY_YTD_9L__c</fullName>
        <label>Red Cap - Last FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Red_Cap_Last_FY_YTD_Std_Btl__c</fullName>
        <label>Red Cap - Last FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Red_Cap_STD_Billing__c</fullName>
        <label>Red Cap Collection (Std Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Red_Cap_STD__c</fullName>
        <label>Red Cap Collection (Std Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Red_Cap_This_FY_VS_Last_FY_YTD__c</fullName>
        <label>Red Cap - This FY VS Last FY YTD (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Red_Cap_This_FY_YTD_9L__c</fullName>
        <label>Red Cap - This FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Red_Cap_This_FY_YTD_Std_Btl__c</fullName>
        <label>Red Cap - This FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Red_Cap__c</fullName>
        <description>9L</description>
        <label>Red Cap Collection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Brand_Grade_Incentive__c</fullName>
        <formula>ASI_CRM_Subbrand__r.ASI_CRM_CN_Sub_brand_Grade__r.ASI_CRM_CN_Incentive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Brand Grade Incentive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_brand_Code__c</fullName>
        <formula>ASI_CRM_Subbrand__r.ASI_MFM_Sub_brand_Code__c</formula>
        <label>Sub-brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Subbrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipName>WS_Outlet_Subbrand_Volume</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1DepletionTo_ALL_TY_YTD_Std_Btl__c</fullName>
        <label>T1 Depletion to ALL - TY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1Depletion_ToALL_LY_YTD_Std_Btl__c</fullName>
        <label>T1 Depletion to ALL - LY YTD (Std.Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_BTL__c</fullName>
        <label>T1 Depletion (BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_CR12__c</fullName>
        <label>T1 Depletion (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_GS_LESS_50ML__c</fullName>
        <label>T1 Depletion GS (&lt;= 50ML)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_GS__c</fullName>
        <label>T1 Depletion (GS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_L50_BTL__c</fullName>
        <label>T1 Depletion &lt;=50ML (BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_L50_CR12__c</fullName>
        <label>T1 Depletion &lt;=50ML (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_L50_GS__c</fullName>
        <label>T1 Depletion &lt;=50ML (Gross Sales)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_L50_STD_Billing__c</fullName>
        <label>T1 Depletion &lt;=50ML (STD Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_L50_STD__c</fullName>
        <label>T1 Depletion &lt;=50ML (STD BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_L50__c</fullName>
        <label>T1 Depletion (&lt;= 50ML)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_Last_FY_MTD_9L__c</fullName>
        <label>T1 Depletion - Last FY MTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_Last_FY_MTD_Std_Btl__c</fullName>
        <label>T1 Depletion - Last FY MTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_Last_FY_YTD_9L__c</fullName>
        <label>T1 Depletion - Last FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_Last_FY_YTD_Std_Btl__c</fullName>
        <label>T1 Depletion - Last FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_STD_Billing__c</fullName>
        <label>T1 Depletion (STD Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_STD__c</fullName>
        <label>T1 Depletion (STD BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_This_FY_VS_Last_FY__c</fullName>
        <label>T1 Depletion -This FY VS Last FY YTD (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_This_FY_YTD_9L__c</fullName>
        <label>T1 Depletion - This FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_This_FY_YTD_Std_Btl__c</fullName>
        <label>T1 Depletion - This FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion__c</fullName>
        <label>T1 Depletion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_to_ALL_LY_MTD_9L__c</fullName>
        <label>T1 Depletion to ALL - LY MTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_to_ALL_LY_MTD_Std__c</fullName>
        <label>T1 Depletion to ALL - LY MTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_to_ALL_LY_YTD_9L__c</fullName>
        <label>T1 Depletion to ALL - Last FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_to_ALL_TY_VS_LY_YTD__c</fullName>
        <label>T1 Depletion to ALL - TY VS LY YTD(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_to_ALL_TY_YTD_9L__c</fullName>
        <label>T1 Depletion to ALL - This FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_DepletiontoALL_Btl__c</fullName>
        <label>T1 Depletion to ALL (BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_DepletiontoALL_CR12__c</fullName>
        <label>T1 Depletion to ALL (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_DepletiontoALL_GS__c</fullName>
        <label>T1 Derpletion to ALL (Gross Sales)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_DepletiontoALL_L50_GS__c</fullName>
        <label>T1 Depletion to ALL &lt;50ML (Gross Sales)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_DepletiontoALL_L50_STD_Billin__c</fullName>
        <label>T1 Depletion to ALL &lt;50ML (STD Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_DepletiontoALL_L50_STD__c</fullName>
        <label>T1 Depletion to ALL &lt;50ML (STD Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_DepletiontoALL_STD_Billing__c</fullName>
        <label>T1 Depletion to ALL (STD Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_DepletiontoALL_STD__c</fullName>
        <label>T1 Depletion to ALL (STD BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_DepletiontoT2_L50_BTL__c</fullName>
        <label>T1 Depletion to ALL &lt;50ML (BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_DepletiontoT2_L50_CR12__c</fullName>
        <label>T1 Depletion to ALL &lt;50ML (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_DepletiontoT2_L50__c</fullName>
        <label>T1 Depletion to ALL &lt;50ML</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_DepletiontoT2__c</fullName>
        <label>T1 Depletion to ALL (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T23_DepletiontoALL_BTL__c</fullName>
        <label>T2/T3 Depletion to ALL (BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T23_DepletiontoALL_CR12__c</fullName>
        <label>T2/T3 Depletion to ALL (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T23_DepletiontoALL_GS__c</fullName>
        <label>T2/T3 Depletion to ALL (Gross Sales)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T23_DepletiontoALL_L50_BTL__c</fullName>
        <label>T2/T3 Depletion to ALL &lt;50ML (BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T23_DepletiontoALL_L50_CR12__c</fullName>
        <label>T2/T3 Depletion to ALL &lt;50ML (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T23_DepletiontoALL_L50_GS__c</fullName>
        <label>T2/T3 Depletion to ALL &lt;50ML (Gross Sale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T23_DepletiontoALL_L50_STD_Billi__c</fullName>
        <label>T2/T3 Depletion to ALL &lt;50ML (STD Billin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T23_DepletiontoALL_L50_STD__c</fullName>
        <label>T2/T3 Depletion to ALL &lt;=50ML (STD BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T23_DepletiontoALL_STD_Billing__c</fullName>
        <label>T2/T3 Depletion to ALL (STD Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T23_DepletiontoALL_STD__c</fullName>
        <label>T2/T3 Depletion to ALL (STD BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2T3DepletionToALL_LY_YTD_StdBtl__c</fullName>
        <label>T2/T3 Depletion to ALL -LY YTD (Std.Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2T3_Depletion_to_ALL_TY_YTD_Std__c</fullName>
        <label>T2/T3 Depletion to ALL -TY YTD (Std.Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_BTL__c</fullName>
        <label>T2 Depletion (BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_CR12__c</fullName>
        <label>T2 Depletion (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_GS_50ML__c</fullName>
        <label>T2 Depletion GS (&lt;= 50ML)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_GS__c</fullName>
        <label>T2 Depletion (GS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_L50_BTL__c</fullName>
        <label>T2 Depletion &lt;=50ML (BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_L50_CR12__c</fullName>
        <label>T2 Depletion &lt;=50ML (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_L50_GS__c</fullName>
        <label>T2 Depletion &lt;=50ML (Gross Sales)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_L50_STD_Billing__c</fullName>
        <label>T2 Depletion &lt;=50ML (STD Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_L50_STD__c</fullName>
        <label>T2 Depletion &lt;=50ML (STD BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_L50__c</fullName>
        <label>T2 Depletion (&lt;= 50ML)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_Last_FY_MTD_9L__c</fullName>
        <label>T2 Depletion - Last FY MTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_Last_FY_MTD_Std_Btl__c</fullName>
        <label>T2 Depletion - Last FY MTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_Last_FY_YTD_9L__c</fullName>
        <label>T2 Depletion - Last FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_Last_FY_YTD_Std_Btl__c</fullName>
        <label>T2 Depletion - Last FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_STD_Billing__c</fullName>
        <label>T2 Depletion (STD Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_STD__c</fullName>
        <label>T2 Depletion (STD BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_This_FY_VS_Last_FY__c</fullName>
        <label>T2 Depletion - This FY VS Last FY YTD(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_This_FY_YTD_9L__c</fullName>
        <label>T2 Depletion - This FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_This_FY_YTD_Std_Btl__c</fullName>
        <label>T2 Depletion - This FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion__c</fullName>
        <label>T2 Depletion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_DepletiontoT3_L50__c</fullName>
        <label>T2/T3 Depletion to All (&lt;= 50ML)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_DepletiontoT3__c</fullName>
        <label>T2/T3 Depletion to All (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Receive_Scan_GS__c</fullName>
        <label>T2 Receive Scan (GS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Receive_Scan_LY_MTD_Std_Btl__c</fullName>
        <label>T2 Receive Scan - Last FY MTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Receive_Scan_LY_YTD_Std_Btl__c</fullName>
        <label>T2 Receive Scan - Last FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Receive_Scan_Last_FY_MTD_9L__c</fullName>
        <label>T2 Receive Scan - Last FY MTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Receive_Scan_Last_FY_YTD_9L__c</fullName>
        <label>T2 Receive Scan - Last FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Receive_Scan_TY_VS_LY_YTD__c</fullName>
        <label>T2 Receive Scan - TY VS LY YTD(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Receive_Scan_TY_YTD_Std_Btl__c</fullName>
        <label>T2 Receive Scan - This FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Receive_Scan_This_FY_YTD_9L__c</fullName>
        <label>T2 Receive Scan - This FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_T3_Depletion_to_ALL_LY_MTD_9L__c</fullName>
        <label>T2/T3 Depletion to ALL- Last FY MTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_T3_Depletion_to_ALL_TY_YTD_9L__c</fullName>
        <label>T2/T3 Depletion to ALL - TY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_receive_scan_BTL__c</fullName>
        <label>T2 Receive Scan (BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_receive_scan_CR12__c</fullName>
        <label>T2 Receive Scan (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_receive_scan_STD_Billing__c</fullName>
        <label>T2 Receive Scan (STD Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_receive_scan_STD__c</fullName>
        <label>T2 Receive Scan (STD BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_receive_scan__c</fullName>
        <label>T2 Receive Scan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Times_of_cap_with_issues__c</fullName>
        <label>Times of Cap with Issues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Depletion_To_T2_GS__c</fullName>
        <label>Total Depletion To T2 (GS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_INV_BTL__c</fullName>
        <label>WS Inventory (BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_INV_CR12__c</fullName>
        <label>WS Inventory (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_INV_STD_Billing__c</fullName>
        <label>WS Inventory (STD Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_INV_STD__c</fullName>
        <label>WS Inventory (STD BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_INV__c</fullName>
        <label>WS Inventory</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_Inventory_GS__c</fullName>
        <label>WS Inventory (GS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_Inventory_Last_FY_9L__c</fullName>
        <label>WS Inventory - Last FY (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_Inventory_Last_FY_Std_Btl__c</fullName>
        <label>WS Inventory - Last FY (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_Inventory_TY_VS_LY_YTD__c</fullName>
        <label>WS Inventory - TY VS LY YTD (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_T1__c</fullName>
        <formula>ASI_CRM_Account__r.ASI_CRM_CN_T1_WS1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WS T1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Yellow_Cap_Btl__c</fullName>
        <label>Yellow Cap Collection (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Yellow_Cap_CR12__c</fullName>
        <label>Yellow Cap Collection (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Yellow_Cap_GS__c</fullName>
        <label>Yellow Cap Collection (GS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Yellow_Cap_Last_FY_MTD_9L__c</fullName>
        <label>Yellow Cap - Last FY MTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Yellow_Cap_Last_FY_MTD_Std_Btl__c</fullName>
        <label>Yellow Cap - Last FY MTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Yellow_Cap_Last_FY_YTD_9L__c</fullName>
        <label>Yellow Cap - Last FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Yellow_Cap_Last_FY_YTD_Std_Btl__c</fullName>
        <label>Yellow Cap - Last FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Yellow_Cap_STD_Billing__c</fullName>
        <label>Yellow Cap Collection (Std Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Yellow_Cap_STD__c</fullName>
        <label>Yellow Cap Collection (Std Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Yellow_Cap_This_FY_VS_Last_FYYTD__c</fullName>
        <label>Yellow Cap - This FY VS Last FY YTD (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Yellow_Cap_This_FY_YTD_9L__c</fullName>
        <label>Yellow Cap - This FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Yellow_Cap_This_FY_YTD_Std_Btl__c</fullName>
        <label>Yellow Cap - This FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Yellow_Cap__c</fullName>
        <description>9L</description>
        <label>Yellow Cap Collection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>